--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,4 @@ jobs:
       - run: # run tests
           name: Run Test and Coverage
           command: |
-            npm test
+            npm run ci-test
