--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ci-test": "ng test --code-coverage --watch false --browsers ChromeHeadless"
+    "ci-test": "ng test --code-coverage --watch false"
   },
   "private": true,
   "dependencies": {
